--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
 	</dependencies>
 
 	<properties>
-		<project.rootdir>${basedir}/../..</project.rootdir>
+		<project.rootdir>${basedir}/..</project.rootdir>
 	</properties>
 
 	<build>
