Migrate ImgLib2 to new SCIFIO API for file I/O
Previously, various ImgLib2 components were using the imglib2-io
library, which is no longer maintained, with all new development having
moved to io.scif:scifio (https://github.com/scifio/scifio).

This change updates all ImgLib2 components to depend on io.scif:scifio
instead. The API is mostly unchanged, although there are a few
differences.

--- a/pom.xml
+++ b/pom.xml
@@ -54,12 +54,6 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>imglib2-io</artifactId>
-			<version>${project.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
 			<artifactId>imglib2-meta</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
@@ -84,6 +78,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>io.scif</groupId>
+			<artifactId>scifio</artifactId>
+			<version>${scifio.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>jama</groupId>
 			<artifactId>jama</artifactId>
