Use Jama release from Maven Central repository
The previous Jama artifact is not currently present on Central,
but it looks like Jama is there with groupId gov.jist.math.
So let's use the latest version of that!

--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>jama</groupId>
+			<groupId>gov.nist.math</groupId>
 			<artifactId>jama</artifactId>
 			<version>${jama.version}</version>
 			<scope>test</scope>
