imglib2-tests: use consistent mpicbg version
We have a properties for mpicbg groupId and version to ensure that all
components use the same ones. Let's use them in imglib2-tests, too.

--- a/pom.xml
+++ b/pom.xml
@@ -97,9 +97,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>mpicbg</groupId>
+			<groupId>${mpicbg.groupId}</groupId>
 			<artifactId>mpicbg</artifactId>
-			<version>20111128</version>
+			<version>${mpicbg.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
