Clean up dependency organization
Dependencies are organized into three major categories:
1) Project dependencies
2) External dependencies
3) Test scope dependencies

(A fourth category is "Runtime scope dependencies" but nothing in
ImgLib2 needs that scope.)

Furthermore, dependencies that are not available (or planned to be
available soon) from Central are flagged with FIXME, so that do not
forget to resolve them somehow.

These dependencies can be seen with:

    grep -A 5 -B 1 FIXME $(git ls-files '*pom.xml')

And further grepping for artifactId reveals the following artifact
dependencies which we will need to somehow address:

    loci-common, mines-jtk, mpicbg, udunits

Fortunately, none of these is a dependency for the most critical core
ImgLib2 components.

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
 	</licenses>
 
 	<dependencies>
+		<!-- NB: All dependencies for this component are test scope. -->
+
+		<!-- Project dependencies -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>imglib2</artifactId>
@@ -65,7 +68,9 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- External dependencies -->
 		<dependency>
+			<!-- FIXME: NOT IN CENTRAL -->
 			<groupId>${bio-formats.groupId}</groupId>
 			<artifactId>loci-common</artifactId>
 			<version>${bio-formats.version}</version>
@@ -77,7 +82,12 @@
 			<version>${imagej1.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>${mpicbg.groupId}</groupId>
+			<artifactId>mpicbg</artifactId>
+			<version>${mpicbg.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>io.scif</groupId>
 			<artifactId>scifio</artifactId>
@@ -94,12 +104,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.9</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>${mpicbg.groupId}</groupId>
-			<artifactId>mpicbg</artifactId>
-			<version>${mpicbg.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
