--- a/pom.xml
+++ b/pom.xml
@@ -258,7 +258,7 @@
 
 	<ciManagement>
 		<system>Jenkins</system>
-		<url>http://jenkins.imagej.net/</url>
+		<url>http://jenkins.imagej.net/view/ImgLib2</url>
 	</ciManagement>
 
 	<mailingLists>
