Temporarily depend on imglib2-algorithm-0.3.3-SNAPSHOT.
Signed-off-by: Jean-Yves Tinevez <jean-yves.tinevez@pasteur.fr>

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2-algorithm</artifactId>
+      <version>0.3.3-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -122,4 +123,7 @@
 		</plugins>
 	</build>
 
+	<properties>
+		<enforcer.skip>true</enforcer.skip>
+	</properties>
 </project>
