--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2</artifactId>
 			<scope>test</scope>
+			<version>3.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
