--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,8 @@ Jean-Yves Tinevez and Michael Zinsmaier.</license.copyrightOwners>
 		<url>https://github.com/imglib/imglib-tests/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Jenkins</system>
-		<url>http://jenkins.imagej.net/job/ImgLib2-Tests/</url>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/imglib/imglib2-tests</url>
 	</ciManagement>
 
 	<repositories>
