--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@ Aivar Grislis, Jonathan Hale, Grant Harris, Stefan Helfrich, Mark Hiner,
 Martin Horn, Steffen Jaensch, Lee Kamentsky, Larry Lindsey, Melissa Linkert,
 Mark Longair, Brian Northan, Nick Perry, Curtis Rueden, Johannes Schindelin,
 Jean-Yves Tinevez and Michael Zinsmaier.</license.copyrightOwners>
+		<enforcer.skip>true</enforcer.skip>
 	</properties>
 
 	<scm>
@@ -116,6 +117,7 @@ Jean-Yves Tinevez and Michael Zinsmaier.</license.copyrightOwners>
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2-roi</artifactId>
+			<version>0.4.8-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
