POM: Stop using git:// protocol with github.com
The GitHub platform is discontinuing support for it.

See: https://github.blog/2021-09-01-improving-git-protocol-security-github/#whats-changing

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@ Jean-Yves Tinevez and Michael Zinsmaier.</license.copyrightOwners>
 	</properties>
 
 	<scm>
-		<connection>scm:git:git://github.com/imglib/imglib-tests</connection>
+		<connection>scm:git:https://github.com/imglib/imglib-tests</connection>
 		<developerConnection>scm:git:git@github.com:imglib/imglib-tests</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/imglib/imglib-tests</url>
